# qa-bot

./: manifest.json  pyproject.toml
.slack/: config.json
listeners/events/: app_messaged.py
listeners/listener_utils/: parse_conversation.py
